update index and about pages

--- a/index.html
+++ b/index.html
@@ -6,7 +6,17 @@
     <title>Health Quest</title>
   </head>
   <body>
-    <h1>sanity check</h1>
+    <header>
+      <ul>
+        <li class="headerItems"><a class="headerLinks" href="index.html">Home</a></li>
+        <li class="headerItems">Rules</li>
+        <li class="headerItems"><a class="headerLinks" href="views/about.html">About Health Quest</a></li>
+        <li class="headerItems">Login</li>
+      </ul>
+    </header>
+    <div id="letsPlayScreen">
+      <a href="views/levels/forest/forestStart.html" id="beginGameButton">Let's Play</a>
+    </div>
   </body>
   <script src="main.js"></script>
 </html>
