--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <link rel="stylesheet" href="style.css">
     <title>Health Quest</title>
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
+      <a id="mainLogo" href="index.html">Health Quest</a>
       <ul>
         <li class="headerItems"><a class="headerLinks" href="index.html">Home</a></li>
         <li class="headerItems">Rules</li>
