--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <header>
-      <a id="mainLogo" href="index.html">Health Quest</a>
+      <a id="mainLogo" href="index.html"class="animated wobble">Health Quest!</a>
       <ul>
         <li class="headerItems"><a class="headerLinks" href="index.html">Home</a></li>
         <li class="headerItems">Rules</li>
@@ -18,7 +18,7 @@
       </ul>
     </header>
     <div id="letsPlayScreen">
-      <a href="views/levels/forest/forestStart.html" id="beginGameButton">Let's Play</a>
+      <a href="views/levels/forest/forestStart.html" id="beginGameButton" class="animated fadeInDownBig">Let's Play</a>
     </div>
   </body>
   <script src="main.js"></script>
